GRADLE-263, GRADLE-299 - some minor changes to output of gradle --properties and gradle --dependencies - grew the integration test for gradle --dependencies
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1228 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/projectReports/build.gradle
+++ b/src/samples/userguide/tutorial/projectReports/build.gradle
@@ -5,5 +5,11 @@ createTask('clean', description: "Deletes the build directory ($buildDirName)")
 createTask('dists', dependsOn: {subprojects.collect{project -> project.libs}})
 
 subprojects {
+    dependencies {
+        addMavenRepo()
+        addConfiguration('compile')
+        compile "commons-io:commons-io:1.2"
+    }
+    
     createTask('libs')
 }
