--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *~
 .gradle
 build
+out
 src/docs/userguide/*.aux
 src/docs/userguide/*.out
 src/docs/userguide/*.log
@@ -8,3 +9,10 @@ src/docs/userguide/*.toc
 src/docs/userguide/*.pdf
 gradle-core.iml
 userguide-trunk.tmproj
+lib
+buildSrc/lib
+buildSrc/build
+*.iml
+*.ipr
+*.iws
+tmpTest
