--- a/src/samples/javaproject/buildSrc/build.gradle
+++ b/src/samples/javaproject/buildSrc/build.gradle
@@ -1,10 +1,14 @@
 usePlugin('java')
 sourceCompatibility = 1.5
 targetCompatibility = 1.5
+dependencies {
+	testCompile 'junit:junit:4.4'
+}
 compile.unmanagedClasspath(BootstrapUtil.gradleClasspath as File[])
 test {
+    // We set forkmode to ONCE as our tests are written in Groovy and the startup time of Groovy is significant.
+    useJUnit().options.fork(forkMode: ForkMode.ONCE)
+
     include '**/*Test.class'
     exclude '**/Abstract*'
-    // We set forkmode to ONCE as our tests are written in Groovy and the startup time of Groovy is significant.
-    options.fork(forkMode: ForkMode.ONCE)
 }
