--- a/src/samples/userguide/organizeBuildLogic/build.gradle
+++ b/src/samples/userguide/organizeBuildLogic/build.gradle
@@ -14,7 +14,7 @@ task ftp << {
     ant {
         taskdef(name: 'ftp',
                 classname: 'org.apache.tools.ant.taskdefs.optional.net.FTP',
-                classpath: configurations.ftpAntTask.asPath())
+                classpath: configurations.ftpAntTask.asPath)
         ftp(server: "ftp.apache.org", userid: "anonymous", password: "me@myorg.com") {
             fileset(dir: "htdocs/manual")
         }
