Improve logging for version properties file handling.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/branches/RB-0.6@1546 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -172,13 +172,14 @@ build.taskGraph.whenReady {graph ->
 }
 
 processResources.doLast {
-    logger.info('Write version properties')
+    File versionPropertiesDestination = new File(classesDir, GradleVersion.FILE_NAME)
+    logger.info('Write version properties to: {}', versionPropertiesDestination.absoluteFile)
     Properties versionProperties = new Properties()
     versionProperties.putAll([
             (GradleVersion.VERSION): version.toString(),
             (GradleVersion.BUILD_TIME): DateFormat.getDateTimeInstance(DateFormat.FULL, DateFormat.FULL).format(buildTime)
     ])
-    versionProperties.store(new FileOutputStream(new File(classesDir, GradleVersion.FILE_NAME)), '')
+    versionProperties.store(new FileOutputStream(versionPropertiesDestination), '')
 }
 
 [compile, compileTests]*.groovyOptions*.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
