--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -5,3 +5,4 @@ osgi=org.gradle.api.plugins.osgi.OsgiPlugin
 jetty=org.gradle.api.plugins.jetty.JettyPlugin
 maven=org.gradle.api.plugins.MavenPlugin
 project-reports=org.gradle.api.plugins.ProjectReportsPlugin
+ant=org.gradle.api.plugins.ant.AntPlugin
