--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#Wed May 20 15:49:35 CEST 2009
+#Tue Jun 02 11:38:53 BST 2009
 previousMinor=6
-previousRevision=0
+previousRevision=1
 previousMajor=0
