GRADLE-515 User Guide grammar fixes and other minor improvements. Patch supplied by Paul Gier.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1563 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tasks/configureUsingConfigure/build.gradle
+++ b/src/samples/userguide/tasks/configureUsingConfigure/build.gradle
@@ -1,6 +1,6 @@
-task copy(type: Copy)
+task myCopy(type: Copy)
 
-copy.configure {
+myCopy.configure {
    from(file('source'))
    into(file('target'))
    includes('**/*.txt', '**/*.xml', '**/*.properties')
