--- a/src/samples/userguide/tasks/configureUsingClosure/build.gradle
+++ b/src/samples/userguide/tasks/configureUsingClosure/build.gradle
@@ -1,8 +1,8 @@
 // START SNIPPET declare-task
-task copy(type: Copy)
+task myCopy(type: Copy)
 // END SNIPPET declare-task
 
-copy {
+myCopy {
    from(file('resources'))
    into(file('target'))
    includes('**/*.txt', '**/*.xml', '**/*.properties')
