--- a/src/samples/userguide/tasks/configureUsingLiterateStyle/build.gradle
+++ b/src/samples/userguide/tasks/configureUsingLiterateStyle/build.gradle
@@ -1,4 +1,4 @@
-task(copy, type: Copy)
+task(myCopy, type: Copy)
     .from(file('resources'))
     .into(file('target'))
     .includes('**/*.txt', '**/*.xml', '**/*.properties')
