GRADLE-357 - Changed JavaPlugin to use a file dependency to add classes dir to the test compile configuration - Removed unmanagedClasspath from Compile and Test tasks - Don't include file dependencies in generated POMs
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1566 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/java/multiproject/buildSrc/build.gradle
+++ b/src/samples/java/multiproject/buildSrc/build.gradle
@@ -1,3 +1,5 @@
 usePlugin 'java'
 
-compile.unmanagedClasspath(BootstrapUtil.gradleClasspath as File[])
+dependencies {
+    compile files(BootstrapUtil.gradleClasspath)
+}
