GRADLE-517, GRADLE-353 - Allow ant properties to be accessed as properties of project.ant - Allow ant properties and references to be accessed as project.ant.properties and project.ant.references - Inject the remaining services into AbstractProject using ServiceRegistry - Set AntBuilder's ant project baseDir to projectDir
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1567 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/antChecksum/build.gradle
+++ b/src/samples/userguide/tutorial/antChecksum/build.gradle
@@ -3,7 +3,7 @@ task checksum << {
     Arrays.sort(files)
     files.each { File file ->
         ant.checksum(file: file.canonicalPath, property: file.name)
-        println "$file.name Checksum: ${ant.antProject.properties[file.name]}"
+        println "$file.name Checksum: ${ant.properties[file.name]}"
     }
 }
         
