--- a/src/samples/userguide/ant/properties/build.gradle
+++ b/src/samples/userguide/ant/properties/build.gradle
@@ -1,19 +1,27 @@
 usePlugin 'ant'
 
 //START SNIPPET set-property
-ant.project.setProperty('buildDir', buildDir.absolutePath)
+ant.buildDir = buildDir
+ant.properties.buildDir = buildDir
+ant.properties['buildDir'] = buildDir
+ant.property(name: 'buildDir', location: buildDir)
 //END SNIPPET set-property
 
 importAntBuild 'build.xml'
 
 //START SNIPPET get-property
-println "antProp = $ant.project.properties.antProp"
+println "antProp = $ant.antProp"
+println "antProp = $ant.properties.antProp"
+println "antProp = ${ant.properties['antProp']}"
 //END SNIPPET get-property
 
 //START SNIPPET set-reference
 ant.path(id: 'classpath', location: 'libs')
+ant.references.classpath = ant.path(location: 'libs')
+ant.references['classpath'] = ant.path(location: 'libs')
 //END SNIPPET set-reference
 
 //START SNIPPET get-reference
-println "antPath = $ant.project.references.antPath"
+println "antPath = $ant.references.antPath"
+println "antPath = ${ant.references['antPath']}"
 //END SNIPPET get-reference
