--- a/src/samples/userguide/tutorial/antChecksumWithMethod/build.gradle
+++ b/src/samples/userguide/tutorial/antChecksumWithMethod/build.gradle
@@ -1,14 +1,14 @@
 task checksum << {
     fileList('../antChecksumFiles').each { File file ->
         ant.checksum(file: file.canonicalPath, property: file.name)
-        println "$file.name Checksum: ${ant.antProject.properties[file.name]}"
+        println "$file.name Checksum: ${ant.properties[file.name]}"
     }
 }
 
 task length << {
     fileList('../antChecksumFiles').each { File file ->
         ant.length(file: file.canonicalPath, property: file.name)
-        println "$file.name Length: ${ant.antProject.properties[file.name]}"
+        println "$file.name Length: ${ant.properties[file.name]}"
     }
 }
 
