GRADLE-442 Fixed quoting of option values in AntGroovyc. Seems to have gone missing with the upgrade to Groovy 1.6
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1579 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -23,3 +23,7 @@ metaInf << new FileSet(new File(srcRoot, 'metaInfFiles'))
 test {
 	useJUnit().options.systemProperties['org.gradle.integtest.buildDir'] = buildDir.absolutePath
 }
+
+compile {
+    groovyOptions.fork(memoryMaximumSize: '128M')
+}
