GRADLE-522	Provide listeners for plugin registration and usage. Extracted Eclipse plugin from Java plugin. Changed Maven plugin to use listeners.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1585 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -1,4 +1,5 @@
 java=org.gradle.api.plugins.JavaPlugin
+eclipse=org.gradle.api.plugins.EclipsePlugin
 groovy=org.gradle.api.plugins.GroovyPlugin
 war=org.gradle.api.plugins.WarPlugin
 osgi=org.gradle.api.plugins.osgi.OsgiPlugin
