GRADLE-524 ide task in gradle's own build.gradle doesn't work
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1603 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -664,7 +664,7 @@ task ide << {
     def libDir = file('lib')
     ant.delete(dir: libDir)
     [configurations.runtime, configurations.testRuntime].each {config ->
-        config.files.each {file ->
+        config.copyRecursive(DependencySpecs.type(Type.EXTERNAL)).files.each {file ->
             ant.copy(file: file, todir: libDir)
         }
     }
