GRADLE-519 - Fixed static import of classes from build script classpath - Allow scriptclasspath { } closure to use imported classes which are visible (buildSrc classes, etc) - Updated samples
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1604 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/java/multiproject/build.gradle
+++ b/src/samples/java/multiproject/build.gradle
@@ -1,4 +1,4 @@
-
+// START SNIPPET configuration-injection
 subprojects {
     usePlugin 'java'
     usePlugin 'eclipse'
@@ -15,5 +15,4 @@ subprojects {
     version = '1.0'
     manifest.mainAttributes(provider: 'gradle')
 }
-
-
+// END SNIPPET configuration-injection
