--- a/src/samples/java/multiproject/api/build.gradle
+++ b/src/samples/java/multiproject/api/build.gradle
@@ -1,3 +1,12 @@
+scriptclasspath {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'commons-math:commons-math:1.1'
+    }
+}
+
 dependsOn ':shared'
 
 configurations {
