GRADLE-519 - Removed all repository and dependency methods from Settings. - Redirect stdout while scriptclasspath { } closure is executing. - Removed Project.getBuildFileClassName()
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1609 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/logging/project2/build.gradle
+++ b/src/samples/logging/project2/build.gradle
@@ -1,2 +1,7 @@
 dependsOn(':project1')
 println(prefix + 'quietProject2Out')
+
+scriptclasspath {
+    println(prefix + 'quietProject2ScriptClassPathOut')
+    logger.info(prefix + 'infoProject2ScriptClassPathOut')
+}
