GRADLE-531 Fix the 'ide' task in buildSrc. Patch supplied by Markus Kobler.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1617 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -25,8 +25,8 @@ test {
 task ide << {
     def libDir = file('lib')
     ant.delete(dir: libDir)
-    [dependencies.runtime, dependencies.testRuntime].each {config ->
-        config.files.each {file ->
+    [configurations.runtime, configurations.testRuntime].each {config ->
+        config.copyRecursive(DependencySpecs.type(Type.EXTERNAL)).files.each {file ->
             ant.copy(file: file, todir: libDir)
         }
     }
