GRADLE-258 Use groovy idiom for listing files
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1626 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/antChecksum/build.gradle
+++ b/src/samples/userguide/tutorial/antChecksum/build.gradle
@@ -1,8 +1,7 @@
 task checksum << {
-    File[] files = new File('../antChecksumFiles').listFiles()
-    Arrays.sort(files)
+    def files = file('../antChecksumFiles').listFiles().sort()
     files.each { File file ->
-        ant.checksum(file: file.canonicalPath, property: file.name)
+        ant.checksum(file: file, property: file.name)
         println "$file.name Checksum: ${ant.properties[file.name]}"
     }
 }
