--- a/src/samples/userguide/tutorial/antChecksumWithMethod/build.gradle
+++ b/src/samples/userguide/tutorial/antChecksumWithMethod/build.gradle
@@ -1,19 +1,17 @@
 task checksum << {
     fileList('../antChecksumFiles').each { File file ->
-        ant.checksum(file: file.canonicalPath, property: file.name)
+        ant.checksum(file: file, property: file.name)
         println "$file.name Checksum: ${ant.properties[file.name]}"
     }
 }
 
 task length << {
     fileList('../antChecksumFiles').each { File file ->
-        ant.length(file: file.canonicalPath, property: file.name)
+        ant.length(file: file, property: file.name)
         println "$file.name Length: ${ant.properties[file.name]}"
     }
 }
 
 File[] fileList(String dir) {
-    File[] files = new File(dir).listFiles()
-    Arrays.sort(files)
-    files
+    file(dir).listFiles().sort()
 }
