GRADLE-538 Fixed 'integTest' to run without requiring 'clean' to be run. Patch supplied by Steve Appling.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1629 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -589,6 +589,7 @@ task integTest(type: Test, dependsOn: [explodedDist, binZip, userguideSrc]) {
 }
 integTest.doFirst {
     ant {
+        delete(dir: integTestDistDir)
         copy(todir: integTestDistDir) {
             fileset(dir: explodedDistDir )
         }
