GRADLE-537 Rearranged the java plugin task dependencies. Patch supplied by Steve Appling.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1637 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/java/onlyif/build.gradle
+++ b/src/samples/java/onlyif/build.gradle
@@ -22,7 +22,7 @@ compileTests.doLast { println "compileTests didWork = ${compile.didWork}" }
 test {
     options.systemProperties['property'] = 'value'
     onlyIf { task ->
-        task.dependsOnTaskDidWork() || compile.didWork
+        compile.didWork
     }
 }
 
