GRADLE-519 - Renamed ProjectInternal.buildScript to ProjectInternal.script - Renamed Project.buildscriptclasspath to Project.buildscript
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1650 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/logging/project2/build.gradle
+++ b/src/samples/logging/project2/build.gradle
@@ -1,7 +1,7 @@
 dependsOn(':project1')
 println(prefix + 'quietProject2Out')
 
-scriptclasspath {
+buildscript {
     println(prefix + 'quietProject2ScriptClassPathOut')
     logger.info(prefix + 'infoProject2ScriptClassPathOut')
 }
