--- a/src/samples/userguide/organizeBuildLogic/externalDependency/build.gradle
+++ b/src/samples/userguide/organizeBuildLogic/externalDependency/build.gradle
@@ -1,6 +1,6 @@
 import org.apache.commons.codec.binary.Base64
 
-scriptclasspath {
+buildscript {
     repositories {
         mavenCentral()
     }
