GRADLE-275 - Added abstract AntBuilder class to api package to define the Ant integration API - Merged AntPlugin + AntPluginConvention into DefaultAntBuilder - Made some properties of AbstractProject immutable - Introduced FileResolver to decouple some general-purpose classes from Project
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1658 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/ant/dependsOnAntTarget/build.gradle
+++ b/src/samples/userguide/ant/dependsOnAntTarget/build.gradle
@@ -1,5 +1,4 @@
-usePlugin 'ant'
-importAntBuild 'build.xml'
+ant.importBuild 'build.xml'
 
 task intro(dependsOn: hello) << {
     println 'Hello, from Gradle'
