--- a/src/samples/userguide/ant/properties/build.gradle
+++ b/src/samples/userguide/ant/properties/build.gradle
@@ -1,5 +1,3 @@
-usePlugin 'ant'
-
 //START SNIPPET set-property
 ant.buildDir = buildDir
 ant.properties.buildDir = buildDir
@@ -7,7 +5,7 @@ ant.properties['buildDir'] = buildDir
 ant.property(name: 'buildDir', location: buildDir)
 //END SNIPPET set-property
 
-importAntBuild 'build.xml'
+ant.importBuild 'build.xml'
 
 //START SNIPPET get-property
 println "antProp = $ant.antProp"
