some tweaks to the performanceTest project
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1660 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/performanceTest/build.gradle
+++ b/performanceTest/build.gradle
@@ -4,7 +4,7 @@ import groovy.text.SimpleTemplateEngine
 import org.gradle.api.artifacts.Configuration
 import org.gradle.api.internal.artifacts.dependencies.DefaultExternalModuleDependency
 
-scriptclasspath {
+buildscript {
     repositories {
         mavenCentral()
     }
