GRADLE-543 A native replacement for the Copy task. Patch supplied by Steve Appling.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1661 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tasks/configureUsingConfigure/build.gradle
+++ b/src/samples/userguide/tasks/configureUsingConfigure/build.gradle
@@ -1,7 +1,7 @@
 task myCopy(type: Copy)
 
 myCopy.configure {
-   from(file('source'))
-   into(file('target'))
-   includes('**/*.txt', '**/*.xml', '**/*.properties')
+   from('source')
+   into('target')
+   include('**/*.txt', '**/*.xml', '**/*.properties')
 }
