--- a/src/samples/userguide/tasks/configureUsingClosure/build.gradle
+++ b/src/samples/userguide/tasks/configureUsingClosure/build.gradle
@@ -3,7 +3,7 @@ task myCopy(type: Copy)
 // END SNIPPET declare-task
 
 myCopy {
-   from(file('resources'))
-   into(file('target'))
-   includes('**/*.txt', '**/*.xml', '**/*.properties')
+   from 'resources'
+   into 'target'
+   include('**/*.txt', '**/*.xml', '**/*.properties')
 }
