--- a/src/samples/userguide/tasks/configureUsingVar/build.gradle
+++ b/src/samples/userguide/tasks/configureUsingVar/build.gradle
@@ -1,4 +1,4 @@
 Copy myCopy = task(myCopy, type: Copy)
-myCopy.from(file('resources'))
-myCopy.into(file('target'))
-myCopy.includes('**/*.txt', '**/*.xml', '**/*.properties')
+myCopy.from 'resources'
+myCopy.into 'target'
+myCopy.include('**/*.txt', '**/*.xml', '**/*.properties')
