--- a/src/samples/userguide/ant/properties/build.gradle
+++ b/src/samples/userguide/ant/properties/build.gradle
@@ -8,9 +8,9 @@ ant.property(name: 'buildDir', location: buildDir)
 ant.importBuild 'build.xml'
 
 //START SNIPPET get-property
-println "antProp = $ant.antProp"
-println "antProp = $ant.properties.antProp"
-println "antProp = ${ant.properties['antProp']}"
+println ant.antProp
+println ant.properties.antProp
+println ant.properties['antProp']
 //END SNIPPET get-property
 
 //START SNIPPET set-reference
@@ -20,6 +20,6 @@ ant.references['classpath'] = ant.path(location: 'libs')
 //END SNIPPET set-reference
 
 //START SNIPPET get-reference
-println "antPath = $ant.references.antPath"
-println "antPath = ${ant.references['antPath']}"
+println ant.references.antPath
+println ant.references['antPath']
 //END SNIPPET get-reference
