--- a/src/samples/userguide/ant/properties/build.xml
+++ b/src/samples/userguide/ant/properties/build.xml
@@ -1,17 +1,17 @@
 <project>
-//START SNIPPET set-property
+<!-- START SNIPPET set-property -->
 <echo>buildDir = ${buildDir}</echo>
-//END SNIPPET set-property
+<!-- END SNIPPET set-property -->
 
-//START SNIPPET get-property
+<!-- START SNIPPET get-property -->
 <property name="antProp" value="a property defined in an Ant build"/>
-//END SNIPPET get-property
+<!-- END SNIPPET get-property -->
 
-//START SNIPPET set-reference
+<!-- START SNIPPET set-reference -->
 <path refid="classpath"/>
-//END SNIPPET set-reference
+<!-- END SNIPPET set-reference -->
 
-//START SNIPPET get-reference
+<!-- START SNIPPET get-reference -->
 <path id="antPath" location="libs"/>
-//END SNIPPET get-reference
+<!-- END SNIPPET get-reference -->
 </project>
