--- a/src/samples/userguide/multiproject/dependencies/webDist/build.gradle
+++ b/src/samples/userguide/multiproject/dependencies/webDist/build.gradle
@@ -19,7 +19,7 @@ subprojects {
 task explodedDist(dependsOn: libs) << {
     File explodedDist = mkdir(buildDir, 'explodedDist')
     subprojects.each {project ->
-        project.libs.archiveTasks.each {archiveTask ->
+        project.tasks.withType(Jar).each {archiveTask ->
             ant.copy(file: archiveTask.archivePath, todir: explodedDist)
         }
     }
