Added coverage for file dependencies, and moved some content around.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1673 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/artifacts/externalDependencies/build.gradle
+++ b/src/samples/userguide/artifacts/externalDependencies/build.gradle
@@ -74,6 +74,13 @@ dependencies {
 }
 //END SNIPPET client-modules
 
+//START SNIPPET file-dependencies
+dependencies {
+    runtime files('libs/a.jar', 'libs/b.jar')
+    runtime new FileSet(dir: 'libs', includes: ['*.jar'])
+}
+//END SNIPPET file-dependencies
+
 //START SNIPPET list-grouping
 List groovy = ["org.codehaus.groovy:groovy-all:1.5.4@jar",
                "commons-cli:commons-cli:1.0@jar",
