Updated coverage for build script classpath, and a couple of other updates
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1674 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/organizeBuildLogic/externalDependency/build.gradle
+++ b/src/samples/userguide/organizeBuildLogic/externalDependency/build.gradle
@@ -1,5 +1,6 @@
 import org.apache.commons.codec.binary.Base64
 
+// START SNIPPET declare-classpath
 buildscript {
     repositories {
         mavenCentral()
@@ -8,7 +9,9 @@ buildscript {
         classpath group: 'commons-codec', name: 'commons-codec', version: '1.2'
     }
 }
+// END SNIPPET declare-classpath
 
 task encode << {
-    println new String(new Base64().encode('hello world\n'.getBytes()))
+    def byte[] encodedString = new Base64().encode('hello world\n' as byte[])
+    println new String(encodedString)
 }
