Fixed bugs in IvyReportConverter
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1677 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/userguide/tutorial/projectReports/build.gradle
+++ b/src/samples/userguide/tutorial/projectReports/build.gradle
@@ -14,7 +14,11 @@ subprojects {
         mavenCentral()
     }
     dependencies {
-        compile "commons-io:commons-io:1.2"
+        if (project.name == 'webapp') {
+        	compile "commons-io:commons-io:1.2"
+		} else {
+			compile "junit:junit:4.4"
+		}
     }
     task libs
     tasks.addRule(new TestRule())
