--- a/src/samples/dependencies/build.gradle
+++ b/src/samples/dependencies/build.gradle
@@ -1,13 +1,24 @@
 import org.apache.ivy.plugins.resolver.FileSystemResolver
 import org.junit.Assert
+import org.gradle.api.tasks.diagnostics.DependencyReportTask
 
 group = 'sealife'
+
+subprojects {
+    usePlugin('java')
+    configurations {
+        other
+    }
+    dependencies {
+        other "sea.fish:herring:1.0", files("$rootDir/lib/selfResolving1.jar")
+    }
+}
 
 repositories {
     add(new FileSystemResolver()) {
         name = "repo"
-        addArtifactPattern("$projectDir/repo/[organization]/[module]-[revision].[ext]")
-        addIvyPattern("$projectDir/repo/[organization]/ivy-[module]-[revision].xml")
+        addArtifactPattern("$rootDir/repo/[organization]/[module]-[revision].[ext]")
+        addIvyPattern("$rootDir/repo/[organization]/ivy-[module]-[revision].xml")
         checkmodified = true
     }
 }
@@ -20,10 +31,16 @@ configurations {
     twoDepsWithOneAsTransitive
     twoDepsWithVersionConflicts
     twoDepsWithDifferentDependencyConfigurations
+    depWithMultipleConfigurations
     extended
     extending.extendsFrom extended
+    extendingWithDifferentConfiguration.extendsFrom extended
     selfResolving
     mixed.extendsFrom selfResolving, twoDepsWithTransitives
+    subproject
+    classifier
+    extendingClassifier.extendsFrom classifier
+    customArtifacts
 }
 
 dependencies {
@@ -34,12 +51,45 @@ dependencies {
     twoDepsWithOneAsTransitive "sea.fish:shark:1.0", "sea.fish:tuna:1.0"
     twoDepsWithVersionConflicts "sea.fish:shark:1.0", "sea.mammals:orca:1.0"
     twoDepsWithDifferentDependencyConfigurations "sea.fish:shark:1.0", "sea.fish:billfish:1.0"
+    depWithMultipleConfigurations group: 'sea.fish', name: 'tuna', version: '1.0', configuration: 'default'
+    depWithMultipleConfigurations group: 'sea.fish', name: 'tuna', version: '1.0', configuration: 'specialWaters'
     extended "sea.fish:tuna:1.0"
     extending "sea.mammals:orca:1.0"
-    selfResolving files("$projectDir/lib/selfResolving1.jar"), files("$projectDir/src")
+    extendingWithDifferentConfiguration group: 'sea.fish', name: 'tuna', version: '1.0', configuration: 'specialWaters'
+    extendingWithDifferentConfiguration "sea.mammals:seal:1.0"
+    selfResolving files("$rootDir/lib/selfResolving1.jar"), files("$projectDir/someDir")
+    subproject project(path: ':deepSea', configuration: 'other')
+    classifier "sea.fish:herring:1.0"
+    classifier('sea.mammals:dolphin:1.0') {
+	    artifact {
+	        name = 'dolphin'
+	        type = 'jar'
+	        extension = 'jar'
+	        classifier = 'oceanic'
+        }
+        artifact {
+	        name = 'dolphin'
+	        type = 'jar'
+	        extension = 'jar'
+	        classifier = 'river'
+        }
+	}
+    // A resolve should return both, tuna and custom-tuna. A files filtering on shark or tuna either or.
+    // But Ivy does not return the correct resolve report. In fact if you produce an equivalent ivy.xml, only custom-tuna is returned, not tuna-1.0.jar.
+    // Therefore we don't test the resolve of customArtifacts
+    customArtifacts "sea.fish:shark:1.0"
+    customArtifacts("sea.fish:tuna:1.0") {
+        artifact {
+	        name = 'custom-tuna'
+	        type = 'jar'
+	        extension = 'jar'
+            url = "file:///$rootDir/lib/selfResolving1.jar"
+        }
+    }
+
 }
 
-task test << {
+task test(dependsOn: configurations.subproject.buildDependencies) << {
     assertCorrectFilesForCompleteConfigurations()
     assertFilesForDependencySubsets()
     assertFilesForConfigurationCopies()
@@ -54,14 +104,27 @@ def assertCorrectFilesForCompleteConfigurations() {
             twoDepsWithOneAsTransitive: ['tuna-1.0.jar', 'shark-1.0.jar', 'seal-2.0.jar', 'herring-1.0.jar'] as Set,
             twoDepsWithVersionConflicts: ['tuna-1.0.jar', 'shark-1.0.jar', 'seal-2.0.jar', 'orca-1.0.jar', 'herring-1.0.jar'] as Set,
             twoDepsWithDifferentDependencyConfigurations: ['tuna-1.0.jar', 'shark-1.0.jar', 'seal-2.0.jar', 'billfish-1.0.jar', 'herring-1.0.jar', 'squid-1.0.jar'] as Set,
+            depWithMultipleConfigurations: ['tuna-1.0.jar', 'herring-1.0.jar', 'squid-1.0.jar'] as Set,
+            extendingWithDifferentConfiguration: ['tuna-1.0.jar', 'herring-1.0.jar', 'squid-1.0.jar', 'seal-1.0.jar'] as Set,
             extending: ['tuna-1.0.jar', 'herring-1.0.jar', 'seal-1.0.jar', 'orca-1.0.jar'] as Set,
-            selfResolving: ['selfResolving1.jar', 'src'] as Set,
-            mixed: ['tuna-1.0.jar', 'orca-1.0.jar', 'seal-1.0.jar', 'herring-1.0.jar', 'selfResolving1.jar', 'src'] as Set
+            selfResolving: ['selfResolving1.jar', 'someDir'] as Set,
+            mixed: ['tuna-1.0.jar', 'orca-1.0.jar', 'seal-1.0.jar', 'herring-1.0.jar', 'selfResolving1.jar', 'someDir'] as Set,
+            subproject: ['selfResolving1.jar', 'herring-1.0.jar'] as Set,
+            classifier: ['dolphin-1.0-oceanic.jar', 'dolphin-1.0-river.jar', "herring-1.0.jar"] as Set,
+            extendingClassifier: ['dolphin-1.0-oceanic.jar', 'dolphin-1.0-river.jar', "herring-1.0.jar"] as Set
     ]
     expectedResults.each { configurationName, expectedFileNames ->
         Set resolvedFileNames = configurations[configurationName].files.collect { it.name }
         Assert.assertEquals(expectedFileNames, resolvedFileNames)
     }
+}
+
+task check << {
+    println(configurations.mixed.files)
+}
+
+task report(type: DependencyReportTask, dependsOn: configurations.subproject.buildDependencies) {
+//    configurations = [project.configurations.depWithMultipleConfigurations]
 }
 
 def assertFilesForDependencySubsets() {
@@ -75,14 +138,15 @@ def assertFilesForDependencySubsets() {
     assertSubsetFiles(configurations.twoDepsWithVersionConflicts, { dep -> dep.name == 'orca' }, ['orca-1.0.jar', 'seal-2.0.jar'])
     assertSubsetFiles(configurations.twoDepsWithDifferentDependencyConfigurations, { dep -> dep.name == 'shark' }, ['tuna-1.0.jar', 'shark-1.0.jar', 'seal-2.0.jar', 'herring-1.0.jar'])
     assertSubsetFiles(configurations.twoDepsWithDifferentDependencyConfigurations, { dep -> dep.name == 'billfish' }, ['tuna-1.0.jar', 'billfish-1.0.jar', 'squid-1.0.jar'])
+    assertSubsetFiles(configurations.depWithMultipleConfigurations, { dep -> dep.configuration == 'default' }, ['tuna-1.0.jar', 'herring-1.0.jar'])
+    assertSubsetFiles(configurations.extendingWithDifferentConfiguration, { dep -> dep.name != 'seal' }, ['tuna-1.0.jar', 'herring-1.0.jar', 'squid-1.0.jar'])
+    assertSubsetFiles(configurations.extendingWithDifferentConfiguration, { dep -> dep.name == 'tuna' && dep.configuration == 'default' }, ['tuna-1.0.jar', 'herring-1.0.jar'])
     assertSubsetFiles(configurations.extending, { dep -> dep.name == 'tuna' }, ['tuna-1.0.jar', 'herring-1.0.jar'])
-    assertSubsetFiles(configurations.selfResolving, { dep -> dep.source.singleFile.name == 'src' }, ['src'])
+    assertSubsetFiles(configurations.selfResolving, { dep -> dep.source.singleFile.name == 'someDir' }, ['someDir'])
     assertSubsetFiles(configurations.mixed, { dep ->
-        dep instanceof org.gradle.api.artifacts.SelfResolvingDependency || dep.name == 'tuna' }, ['src', 'selfResolving1.jar', 'tuna-1.0.jar', 'herring-1.0.jar'])
-}
-
-task check << {
-    assertSubsetFiles(configurations.twoDepsWithOneAsTransitive, { dep -> dep.name == 'tuna' }, ['tuna-1.0.jar', 'herring-1.0.jar'])    
+        dep instanceof org.gradle.api.artifacts.SelfResolvingDependency || dep.name == 'tuna' }, ['someDir', 'selfResolving1.jar', 'tuna-1.0.jar', 'herring-1.0.jar'])
+    assertSubsetFiles(configurations.classifier, { dep -> dep.name == 'dolphin' }, ['dolphin-1.0-oceanic.jar', 'dolphin-1.0-river.jar'])
+    assertSubsetFiles(configurations.extendingClassifier, { dep -> dep.name == 'dolphin' }, ['dolphin-1.0-oceanic.jar', 'dolphin-1.0-river.jar'])
 }
 
 def assertSubsetFiles(configuration, spec, expectedFileNames) {
@@ -97,10 +161,10 @@ def assertFilesForConfigurationCopies() {
     assertConfigurationCopyFiles(configurations.twoDepsWithVersionConflicts, { dep -> dep.name == 'orca' }, ['orca-1.0.jar', 'seal-1.0.jar'])
     assertConfigurationCopyFiles(configurations.extending, { dep -> true }, ['seal-1.0.jar', 'orca-1.0.jar'])
     assertConfigurationCopyFiles(configurations.extending, { dep -> dep.name == 'tuna' }, ['tuna-1.0.jar', 'herring-1.0.jar'], true)
-    assertConfigurationCopyFiles(configurations.selfResolving, { dep -> true }, ['selfResolving1.jar', 'src'])
-    assertConfigurationCopyFiles(configurations.selfResolving, { dep -> dep.source.singleFile.name == 'src' }, ['src'])
+    assertConfigurationCopyFiles(configurations.selfResolving, { dep -> true }, ['selfResolving1.jar', 'someDir'])
+    assertConfigurationCopyFiles(configurations.selfResolving, { dep -> dep.source.singleFile.name == 'someDir' }, ['someDir'])
     assertConfigurationCopyFiles(configurations.mixed, { dep ->
-        dep instanceof org.gradle.api.artifacts.SelfResolvingDependency || dep.name == 'tuna' }, ['src', 'selfResolving1.jar', 'tuna-1.0.jar', 'herring-1.0.jar'], true)
+        dep instanceof org.gradle.api.artifacts.SelfResolvingDependency || dep.name == 'tuna' }, ['someDir', 'selfResolving1.jar', 'tuna-1.0.jar', 'herring-1.0.jar'], true)
 }
 
 def assertConfigurationCopyFiles(configuration, spec, expectedFileNames, recursive = false) {
