Changed ide task to use Configuration.files instead of Configuration.copyRecursive
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1680 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -665,7 +665,7 @@ task ide << {
     def libDir = file('lib')
     ant.delete(dir: libDir)
     [configurations.runtime, configurations.testRuntime].each {config ->
-        config.copyRecursive(DependencySpecs.type(Type.EXTERNAL)).files.each {file ->
+        config.files(DependencySpecs.type(Type.EXTERNAL)).each {file ->
             ant.copy(file: file, todir: libDir)
         }
     }
