--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -6,3 +6,4 @@ osgi=org.gradle.api.plugins.osgi.OsgiPlugin
 jetty=org.gradle.api.plugins.jetty.JettyPlugin
 maven=org.gradle.api.plugins.MavenPlugin
 project-reports=org.gradle.api.plugins.ProjectReportsPlugin
+code-quality=org.gradle.api.plugins.quality.CodeQualityPlugin
