GRADLE-555 - Allow CodeNarc config file to be specified - Upgraded to CodeNarc 0.6
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1694 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ import org.gradle.build.docs.SampleElementValidator
 
 defaultTasks "clean", "dists"
 
-usePlugin('groovy')
+usePlugin 'groovy'
 
 archivesBaseName = 'gradle'
 
@@ -143,7 +143,7 @@ dependencies {
         dependency("com.google.collections:google-collections:0.9")
         dependency("commons-beanutils:commons-beanutils-core:1.7.0")
     }
-    runtime module("org.codenarc:CodeNarc:0.5") {
+    runtime module("org.codenarc:CodeNarc:0.6") {
         dependency("org.slf4j:log4j-over-slf4j:1.5.3@jar")
     }
 
