GRADLE-583 Pull Test Task out of jar dependency chain.  Does not yet include changes to CodeQualityPlugin or documentation.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1723 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/samples/java/multiproject/build.gradle
+++ b/src/samples/java/multiproject/build.gradle
@@ -2,6 +2,8 @@
 subprojects {
     usePlugin 'java'
     usePlugin 'eclipse'
+    
+    dependsOnChildren()
 
     repositories {
        mavenCentral()
